# cxg

./: .gitignore  Cargo.toml  README.md  default.cfg  rustfmt.toml
src/: app.rs  glinit.rs  main.rs
src/assets/: _rect.fs.glsl  _rect.vs.glsl  cursor.vs.glsl  rect.fs.glsl  rect.vs.glsl  rectangle.fs.glsl  rectangle.vs.glsl  round_rect.fs.glsl  round_rect.vs.glsl
src/cmd/: keybindings.rs  keyimpl.rs  mod.rs  translation.rs
src/datastructure/: mod.rs
src/debuginfo/: mod.rs  process_info.rs
src/opengl/: glinit.rs  mod.rs  polygon_renderer.rs  rect.rs  rectangle.rs  rectangle_renderer.rs  shaders.rs  text.rs  text_renderer.rs  types.rs
src/opengl/renderer/: mod.rs
src/textbuffer/: buffers.rs  cursor.rs  gap_buffer.rs  metadata.rs  mod.rs  simplebuffer.rs  test_textfile.source  text_buffer.rs
src/textbuffer/contiguous/: contiguous.rs  mod.rs
src/textbuffer/gb/: gap_buffer.rs  mod.rs  text_buffer.rs
src/textbuffer/operations/: mod.rs
src/textbuffer/simple/: mod.rs  simplebuffer.rs
src/ui/: boundingbox.rs  clipboard.rs  container.rs  coordinate.rs  debug_view.rs  font.rs  frame.rs  inputbox.rs  mod.rs  panel.rs  scrollbar.rs  state.rs  statusbar.rs  view.rs
src/ui/basic/: boundingbox.rs  coordinate.rs  frame.rs  mod.rs
src/ui/eventhandling/: event.rs  input.rs  mod.rs
src/ui/input/: line_text_box.rs  mod.rs
src/ui/inputbox/: line_text_box.rs  listbox.rs  mod.rs
src/utils/: macros.rs  mod.rs
