[package]
name = "cxgledit"
version = "0.1.0"
authors = ["cx <simon.farre.cx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "*"
gl = "*"
libc = "*"
freetype-rs = "*"
png = "*"

[profile.release]
debug = true
debug-assertions = false
opt-level = 3
overflow-checks = false

[profile.dev]
debug = true
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

