[package]
name = "cxgledit"
version = "0.1.5"
authors = ["cx <simon.farre.cx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "*"
gl = "*"
libc = "*"
freetype-rs = "*"
png = "*"
walkdir = "*"
# Rust binding around nativefiledialogs
nfd = "0.0.4"
# Used for syntax highlighting, and other things (obviously). I suck at performant sub string searching.. so why the hell not use this
regex = "*"


[profile.release]
debug = true
debug-assertions = false
opt-level = 3
overflow-checks = false
lto = false
incremental = true


[profile.dev]
debug = true
opt-level = 0
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
overflow-checks = false